--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <nav class="navbar" aria-label="Main navigation">
             <div class="navbar-empty"></div>
             <div class="content-container">
-                <div class="logo">Digital Vortex</div>
+                <div class="logo">
+                    <img src="assets/logo Digital Vortex.png" alt="Digital Vortex Logo" style="height: 50px;">
+                </div>
                 <div class="menu-icon">
                     <i class="fas fa-bars"></i>
                     <div class="dropdown-menu">
