Eliminar comentarios de tarjetas de miembros del equipo en el HTML

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="team-member-name roboto-medium">Carolina Campos</div>
                             <div class="team-member-role">General Manager</div>
                         </div>
-                        <div class="team-card">
+                        <!-- <div class="team-card">
                             <img src="fotos/trinidad.jpg" alt="Trinidad Viveros" class="profile-image">
                             <div class="team-member-name roboto-medium">Trinidad Viveros</div>
                             <div class="team-member-role">Communications Director</div>
@@ -123,7 +123,7 @@
                             <img src="fotos/fernando.jpg" alt="Fernando Cassina" class="profile-image">
                             <div class="team-member-name roboto-medium">Fernando Cassina</div>
                             <div class="team-member-role">Associate Business Development Consultant</div>
-                        </div>
+                        </div> -->
                         
                         <!-- <div class="team-card">
                             <i class="fas fa-user-tie"></i>
