Agregar enlaces de LinkedIn a las tarjetas de miembros del equipo

--- a/index.html
+++ b/index.html
@@ -100,14 +100,18 @@
                 <div class="team-container">
                     <div class="team-grid">
                         <div class="team-card">
-                            <img src="fotos/alfonso.jpg" alt="Alfonso Viveros" class="profile-image">
-                            <div class="team-member-name roboto-medium">Alfonso Viveros</div>
-                            <div class="team-member-role">Co-Founder</div>
+                            <a href="https://www.linkedin.com/in/alfonso-viveros/" target="_blank">
+                                <img src="https://media.licdn.com/dms/image/v2/D4D03AQFrCQTk2fjsBQ/profile-displayphoto-shrink_400_400/B4DZYX3j6DGwAg-/0/1744157163610?e=1749686400&v=beta&t=bf1kMVPnyD5GpBe0yi6cNnHjIRrUl14jwuhLynUuzuo" alt="Alfonso Viveros" class="profile-image">
+                                <div class="team-member-name roboto-medium">Alfonso Viveros</div>
+                                <div class="team-member-role">Co-Founder</div>
+                            </a>
                         </div>
                         <div class="team-card">
-                            <img src="fotos/carolina.jpg" alt="Carolina Campos" class="profile-image">
-                            <div class="team-member-name roboto-medium">Carolina Campos</div>
-                            <div class="team-member-role">General Manager</div>
+                            <a href="https://www.linkedin.com/in/carolina-campos-parra-b64b82186/" target="_blank">
+                                <img src="https://media.licdn.com/dms/image/v2/C4E03AQEn_oSG1NwmGA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1559588201666?e=1749686400&v=beta&t=DhYdE11xLP0_HgqFUFcfRNQrpdPKhSYYA2TtG6OtM8Q" alt="Carolina Campos" class="profile-image">
+                                <div class="team-member-name roboto-medium">Carolina Campos</div>
+                                <div class="team-member-role">General Manager</div>
+                            </a>
                         </div>
                         <!-- <div class="team-card">
                             <img src="fotos/trinidad.jpg" alt="Trinidad Viveros" class="profile-image">
