Eliminar el pie de página del HTML

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </section>
         </div>
     </main>
-    <footer>
+    <!-- <footer>
         <div class="footer-content">
             <p class="roboto-medium">Follow us</p>
             <div class="social-icons">
@@ -207,7 +207,7 @@
                 <a href="mailto:contact@digitalvortex.com" class="social-icon"><i class="far fa-envelope"></i></a>
             </div>
         </div>
-    </footer>
+    </footer> -->
     
     <!-- Schema.org structured data -->
     <script type="application/ld+json">
